--- a/config/pkgmk.conf
+++ b/config/pkgmk.conf
@@ -1,6 +1,6 @@
 export CFLAGS="-O2 -pipe"
 export CXXFLAGS="${CFLAGS}"
-export MAKEFLAGS="-j8"
+export MAKEFLAGS="-j4"
 
 case ${PKGMK_ARCH} in
         "x86_64"|"")
@@ -16,5 +16,14 @@ case ${PKGMK_ARCH} in
                 exit 1
                 ;;
 esac
+PKGMK_GROUPS=(devel man doc service)
+PKGMK_LOCALES=(fr de it es nl pt da nn sv fi)
+PKGMK_CLEAN="no"
+PKGMK_KEEP_SOURCES="yes"
+PKGMK_SOURCE_DIR=/sources
 PKGMK_WORK_DIR="/tmp/work"
-PKGMK_SOURCE_DIR="/sources"
+PKGMK_COMPRESS_PACKAGE="yes"
+PKGMK_COMPRESSION_MODE="xz"
+PKGMK_IGNORE_REPO="no"
+PKGMK_IGNORE_COLLECTION="no"
+PKGMK_IGNORE_RUNTIMEDEPS="no"
